--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "rails1",
+  "name": "schedule",
   "private": true,
+  "version": "0.1.0",
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.22.9",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
-  "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3"
   }
